--- a/content/data/config.json
+++ b/content/data/config.json
@@ -41,8 +41,7 @@
                 "type": "footer_text",
                 "image": "images/purple-eggplant.png",
                 "image_url": "/",
-                "image_alt": "Footer logo",
-                "content": "Stackbit theme demo"
+                "image_alt": "Footer logo"
             },
             {
                 "type": "footer_nav",
